--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;700&display=swap");
+
 html {
   box-sizing: border-box;
 }
@@ -8,6 +10,7 @@ body {
   overflow-y: hidden;
   display: flex;
   align-items: center;
+  font-family: "Work Sans", sans-serif;
 }
 
 /* Video Background */
@@ -46,6 +49,7 @@ video {
   z-index: 2;
   display: flex;
   justify-content: center;
+  background: rgba(255, 255, 255, 0.85);
 }
 
 .input-container {
@@ -78,6 +82,7 @@ input {
   border-radius: 20px;
   background: #fff;
   outline: none;
+  font-family: "Work Sans", sans-serif;
 }
 
 /* Button */
@@ -92,6 +97,10 @@ button {
   color: white;
   cursor: pointer;
   outline: none;
+}
+
+button:hover {
+  filter: brightness(110%);
 }
 
 /* Countdown */
@@ -122,6 +131,7 @@ li span {
 @media screen and (max-width: 600px) {
   .video-background {
     height: 100vh;
+    width: 100vw;
   }
 
   video {
@@ -131,6 +141,8 @@ li span {
   }
 
   .container {
+    min-width: unset;
+    width: 95vw;
     min-height: 245px;
     padding: 20px;
     margin: 10px;
