--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;700&display=swap");
 
 html {
   box-sizing: border-box;
@@ -10,7 +10,7 @@ body {
   overflow-y: hidden;
   display: flex;
   align-items: center;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 /* Video Background */
@@ -82,7 +82,7 @@ input {
   border-radius: 20px;
   background: #fff;
   outline: none;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 /* Button */
@@ -109,6 +109,7 @@ ul {
 }
 
 li {
+  display: inline-block;
   font-size: 30px;
   list-style-type: none;
   padding: 10px;
@@ -125,6 +126,24 @@ li span {
 .complete {
   position: relative;
   top: 60px;
+}
+
+.complete-title {
+  animation: complete 2s infinite;
+}
+
+@keyframes complete {
+  0% {
+    color: rgb(231, 70, 70);
+  }
+
+  50% {
+    color: rgba(32, 32, 32, 0.404);
+  }
+
+  100% {
+    color: rgb(231, 70, 70);
+  }
 }
 
 /* Media Query: Large Smartphone (Vertical) */
